Compiler Bouw/compiler/test/basic/stephen/fail/if_else_return.cvc
// Should give an error because main doesn't end in a return.

export int main() {
    if (true) {
        return 1;
    } else {
        return 2;
    }
}
